--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,33 @@
     <groupId>org.example</groupId>
     <artifactId>geo-service</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+   <dependencies>
+       <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
+       <dependency>
+           <groupId>org.mockito</groupId>
+           <artifactId>mockito-all</artifactId>
+           <version>1.10.19</version>
+           <scope>test</scope>
+       </dependency>
+       <!-- https://mvnrepository.com/artifact/junit/junit -->
+       <dependency>
+           <groupId>junit</groupId>
+           <artifactId>junit</artifactId>
+           <version>4.13.2</version>
+           <scope>test</scope>
+       </dependency>
+       <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+       <dependency>
+           <groupId>org.junit.jupiter</groupId>
+           <artifactId>junit-jupiter-api</artifactId>
+           <version>5.8.0-M1</version>
+           <scope>test</scope>
+       </dependency>
+
+   </dependencies>
+
+
     <build>
         <plugins>
             <plugin>
